Fixed redundancies and began work on the shop section alongside other formatting

--- a/catalog.html
+++ b/catalog.html
@@ -6,6 +6,7 @@
     <title>Coast to Coast</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='assets/css/style.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href='assets/css/shop.css'>
     <script src='assets/js/script.js'></script>
 </head>
 
@@ -44,6 +45,30 @@
         </div>
     </div>
     <div class="banner-spacer"></div>
+
+    <div class="catalog-container">
+        <span class='catalog-title'>Search By Category</span>
+        <a class="catalog-button">
+           <img src="assets/images/insert_image.jpg" class="catalog-img">
+            <span class="catalog-text">Exeter School - Grease</span>
+        </a>
+        <a class="catalog-button">
+           <img src="assets/images/insert_image.jpg" class="catalog-img">
+            <span class="catalog-text">Winter Drop</span>
+        </a>
+        <a class="catalog-button">
+           <img src="assets/images/insert_image.jpg" class="catalog-img">
+            <span class="catalog-text">Resin Designs</span>
+        </a>
+        <a class="catalog-button">
+           <img src="assets/images/insert_image.jpg" class="catalog-img">
+            <span class="catalog-text">Bespoke Made</span>
+        </a>
+        <a class="catalog-button">
+           <img src="assets/images/insert_image.jpg" class="catalog-img">
+            <span class="catalog-text">Order In Bulk</span>
+        </a>
+    </div>
 </body>
 <footer>
     <div class="footer-content">
