--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             <img src="assets/images/logo.png" alt='Coast to Coast Logo' class="banner-logo">
         </a>
         <div class = "banner-right banner">
-            <a href="shop.html" class = "banner-button">
+            <a href="catalog.html" class = "banner-button">
                 <span class = "banner-text">Shop</span>
                 <img src="assets/images/shopping-cart.png" class="banner-icon">
             </a>
@@ -50,17 +50,17 @@
             <img src="assets/images/insert_image.jpg" class="img-tile-img">
             <span class="img-tile-text">Coasters to make you and the Beaches smile</span>
             <span class="img-tile-subtext">Handmade by caring students</span>
-            <div class="img-tile-button">
+            <a href="about.html" class="img-tile-button">
                 <span class="img-tile-button-text">About</span>
-            </div>
+            </a>
         </div>
         <div class="img-tile">
             <img src="assets/images/insert_image.jpg" class="img-tile-img">
             <span class="img-tile-text">Tile2</span>
             <span class="img-tile-subtext">This is Tile 2</span>
-            <div class="img-tile-button">
+            <a href = "#" class="img-tile-button">
                 <span class="img-tile-button-text">Learn More</span>
-            </div>
+            </a>
         </div>
 
 
@@ -69,8 +69,8 @@
         </div>
     </div>
 
-    <div class = "minishop-wrapper">
-        <header class = "minishop-header">Shop Our Products</header>
+    <div class = "minishop-container">
+        <header class = "minishop-header">Our Best Sellers</header>
         <div class = "minishop-tile">
             <img src = "assets/images/insert_image.jpg" class = "minishop-img">
             <div class = "minishop-name">Product Name</div>
@@ -131,8 +131,15 @@
             <div class = "minishop-name">Product Name</div>
             <div class = "minishop-price">£9.99</div>
         </div>
-        <a href="shop.html" class="minishop-view-all-button">
+        <a href="catalog.html" class="minishop-view-all-button"> 
             <span class="minishop-view-all-text">View All Products</span>
+        </a>
     </div>
 </body>
+<footer>
+    <div class="footer-content">
+        <span class="footer-text">Website by Euan Jones.</span>
+        <span class="footer-text">© 2025 Coast to Coast. All rights reserved.</span>
+    </div>
+</footer>
 </html>
