--- a/contact.html
+++ b/contact.html
@@ -46,4 +46,10 @@
     <div class="banner-spacer"></div>
     
 </body>
+<footer>
+    <div class="footer-content">
+        <span class="footer-text">Website by Euan Jones.</span>
+        <span class="footer-text">© 2025 Coast to Coast. All rights reserved.</span>
+    </div>
+</footer>
 </html>
