--- a/catalog.html
+++ b/catalog.html
@@ -13,10 +13,10 @@
 <body>
         <div id="sidenav" class="sidenav">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-        <a href="#">About</a>
-        <a href="#">Services</a>
-        <a href="#">Clients</a>
-        <a href="#">Contact</a>
+        <a href="index.html">Home</a>
+        <a href="about.html">About</a>
+        <a href="contact.html">Contact</a>
+        <a href="#">ToC's</a>
     </div>
 
     <div class="banner-wrap">
@@ -30,7 +30,7 @@
             <img src="assets/images/logo.png" alt='Coast to Coast Logo' class="banner-logo">
         </a>
         <div class = "banner-right banner">
-            <a href="shop.html" class = "banner-button">
+            <a href="catalog.html" class = "banner-button">
                 <span class = "banner-text">Shop</span>
                 <img src="assets/images/shopping-cart.png" class="banner-icon">
             </a>
@@ -47,28 +47,17 @@
     <div class="banner-spacer"></div>
 
     <div class="catalog-container">
-        <span class='catalog-title'>Search By Category</span>
-        <a class="catalog-button">
-           <img src="assets/images/insert_image.jpg" class="catalog-img">
-            <span class="catalog-text">Exeter School - Grease</span>
-        </a>
-        <a class="catalog-button">
-           <img src="assets/images/insert_image.jpg" class="catalog-img">
-            <span class="catalog-text">Winter Drop</span>
-        </a>
-        <a class="catalog-button">
-           <img src="assets/images/insert_image.jpg" class="catalog-img">
-            <span class="catalog-text">Resin Designs</span>
-        </a>
-        <a class="catalog-button">
+        <span class="catalog-title">Search By Category</span>
+        <a class="catalog-button" href="#">
            <img src="assets/images/insert_image.jpg" class="catalog-img">
             <span class="catalog-text">Bespoke Made</span>
         </a>
-        <a class="catalog-button">
+        <a class="catalog-button" href="#">
            <img src="assets/images/insert_image.jpg" class="catalog-img">
             <span class="catalog-text">Order In Bulk</span>
         </a>
     </div>
+    <script src="assets/js/catalog.js"></script>
 </body>
 <footer>
     <div class="footer-content">
