--- a/contact.html
+++ b/contact.html
@@ -6,16 +6,17 @@
     <title>Coast to Coast</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='assets/css/style.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href='assets/css/shop.css'>
     <script src='assets/js/script.js'></script>
 </head>
 
 <body>
         <div id="sidenav" class="sidenav">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-        <a href="#">About</a>
-        <a href="#">Services</a>
-        <a href="#">Clients</a>
-        <a href="#">Contact</a>
+        <a href="index.html">Home</a>
+        <a href="about.html">About</a>
+        <a href="contact.html">Contact</a>
+        <a href="#">ToC's</a>
     </div>
 
     <div class="banner-wrap">
@@ -29,7 +30,7 @@
             <img src="assets/images/logo.png" alt='Coast to Coast Logo' class="banner-logo">
         </a>
         <div class = "banner-right banner">
-            <a href="shop.html" class = "banner-button">
+            <a href="catalog.html" class = "banner-button">
                 <span class = "banner-text">Shop</span>
                 <img src="assets/images/shopping-cart.png" class="banner-icon">
             </a>
