--- a/index.html
+++ b/index.html
@@ -6,16 +6,17 @@
     <title>Coast to Coast</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <link rel='stylesheet' type='text/css' media='screen' href='assets/css/style.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href='assets/css/shop.css'>
     <script src='assets/js/script.js'></script>
 </head>
 
 <body>
     <div id="sidenav" class="sidenav">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
-        <a href="#">About</a>
-        <a href="#">Services</a>
-        <a href="#">Clients</a>
-        <a href="#">Contact</a>
+        <a href="index.html">Home</a>
+        <a href="about.html">About</a>
+        <a href="contact.html">Contact</a>
+        <a href="#">ToC's</a>
     </div>
     
     <div class="banner-wrap">
@@ -69,70 +70,70 @@
         </div>
     </div>
 
-    <div class = "minishop-container">
-        <header class = "minishop-header">Our Best Sellers</header>
-        <div class = "minishop-tile">
-            <img src = "assets/images/insert_image.jpg" class = "minishop-img">
-            <div class = "minishop-name">Product Name</div>
-            <div class = "minishop-price">£9.99</div>
+    <div class = "shop-panel-container">
+        <header class = "shop-panel-header">Our Best Sellers</header>
+        <div class = "shop-panel-tile">
+            <img src = "assets/images/insert_image.jpg" class = "shop-panel-img">
+            <div class = "shop-panel-name">Product Name</div>
+            <div class = "shop-panel-price">£9.99</div>
         </div>
-        <div class = "minishop-tile">
-            <img src = "assets/images/insert_image.jpg" class = "minishop-img">
-            <div class = "minishop-name">Product Name</div>
-            <div class = "minishop-price">£9.99</div>
+        <div class = "shop-panel-tile">
+            <img src = "assets/images/insert_image.jpg" class = "shop-panel-img">
+            <div class = "shop-panel-name">Product Name</div>
+            <div class = "shop-panel-price">£9.99</div>
         </div>
-        <div class = "minishop-tile">
-            <img src = "assets/images/insert_image.jpg" class = "minishop-img">
-            <div class = "minishop-name">Product Name</div>
-            <div class = "minishop-price">£9.99</div>
+        <div class = "shop-panel-tile">
+            <img src = "assets/images/insert_image.jpg" class = "shop-panel-img">
+            <div class = "shop-panel-name">Product Name</div>
+            <div class = "shop-panel-price">£9.99</div>
         </div>
-        <div class = "minishop-tile">
-            <img src = "assets/images/insert_image.jpg" class = "minishop-img">
-            <div class = "minishop-name">Product Name</div>
-            <div class = "minishop-price">£9.99</div>
+        <div class = "shop-panel-tile">
+            <img src = "assets/images/insert_image.jpg" class = "shop-panel-img">
+            <div class = "shop-panel-name">Product Name</div>
+            <div class = "shop-panel-price">£9.99</div>
         </div>
-        <div class = "minishop-tile">
-            <img src = "assets/images/insert_image.jpg" class = "minishop-img">
-            <div class = "minishop-name">Product Name</div>
-            <div class = "minishop-price">£9.99</div>
+        <div class = "shop-panel-tile">
+            <img src = "assets/images/insert_image.jpg" class = "shop-panel-img">
+            <div class = "shop-panel-name">Product Name</div>
+            <div class = "shop-panel-price">£9.99</div>
         </div>
-        <div class = "minishop-tile">
-            <img src = "assets/images/insert_image.jpg" class = "minishop-img">
-            <div class = "minishop-name">Product Name</div>
-            <div class = "minishop-price">£9.99</div>
+        <div class = "shop-panel-tile">
+            <img src = "assets/images/insert_image.jpg" class = "shop-panel-img">
+            <div class = "shop-panel-name">Product Name</div>
+            <div class = "shop-panel-price">£9.99</div>
         </div>
-        <div class = "minishop-tile">
-            <img src = "assets/images/insert_image.jpg" class = "minishop-img">
-            <div class = "minishop-name">Product Name</div>
-            <div class = "minishop-price">£9.99</div>
+        <div class = "shop-panel-tile">
+            <img src = "assets/images/insert_image.jpg" class = "shop-panel-img">
+            <div class = "shop-panel-name">Product Name</div>
+            <div class = "shop-panel-price">£9.99</div>
         </div>
-        <div class = "minishop-tile">
-            <img src = "assets/images/insert_image.jpg" class = "minishop-img">
-            <div class = "minishop-name">Product Name</div>
-            <div class = "minishop-price">£9.99</div>
+        <div class = "shop-panel-tile">
+            <img src = "assets/images/insert_image.jpg" class = "shop-panel-img">
+            <div class = "shop-panel-name">Product Name</div>
+            <div class = "shop-panel-price">£9.99</div>
         </div>
-        <div class = "minishop-tile">
-            <img src = "assets/images/insert_image.jpg" class = "minishop-img">
-            <div class = "minishop-name">Product Name</div>
-            <div class = "minishop-price">£9.99</div>
+        <div class = "shop-panel-tile">
+            <img src = "assets/images/insert_image.jpg" class = "shop-panel-img">
+            <div class = "shop-panel-name">Product Name</div>
+            <div class = "shop-panel-price">£9.99</div>
         </div>
-        <div class = "minishop-tile">
-            <img src = "assets/images/insert_image.jpg" class = "minishop-img">
-            <div class = "minishop-name">Product Name</div>
-            <div class = "minishop-price">£9.99</div>
+        <div class = "shop-panel-tile">
+            <img src = "assets/images/insert_image.jpg" class = "shop-panel-img">
+            <div class = "shop-panel-name">Product Name</div>
+            <div class = "shop-panel-price">£9.99</div>
         </div>
-        <div class = "minishop-tile">
-            <img src = "assets/images/insert_image.jpg" class = "minishop-img">
-            <div class = "minishop-name">Product Name</div>
-            <div class = "minishop-price">£9.99</div>
+        <div class = "shop-panel-tile">
+            <img src = "assets/images/insert_image.jpg" class = "shop-panel-img">
+            <div class = "shop-panel-name">Product Name</div>
+            <div class = "shop-panel-price">£9.99</div>
         </div>
-        <div class = "minishop-tile">
-            <img src = "assets/images/insert_image.jpg" class = "minishop-img">
-            <div class = "minishop-name">Product Name</div>
-            <div class = "minishop-price">£9.99</div>
+        <div class = "shop-panel-tile">
+            <img src = "assets/images/insert_image.jpg" class = "shop-panel-img">
+            <div class = "shop-panel-name">Product Name</div>
+            <div class = "shop-panel-price">£9.99</div>
         </div>
-        <a href="catalog.html" class="minishop-view-all-button"> 
-            <span class="minishop-view-all-text">View All Products</span>
+        <a href="catalog.html" class="shop-panel-view-all-button"> 
+            <span class="shop-panel-view-all-text">View All Products</span>
         </a>
     </div>
 </body>
