Cart feature added

--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
     <div id="sidenav" class="sidenav">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
         <a href="index.html">Home</a>
+        <a href="catalog.html">Products</a>
         <a href="about.html">About</a>
         <a href="contact.html">Contact</a>
-        <a href="#">ToC's</a>
     </div>
     
     <div class="banner-wrap">
@@ -30,17 +30,9 @@
             <img src="assets/images/logo.png" alt='Coast to Coast Logo' class="banner-logo">
         </a>
         <div class = "banner-right banner">
-            <a href="catalog.html" class = "banner-button">
-                <span class = "banner-text">Shop</span>
+            <a href="cart.html" class = "banner-button">
+                <span class = "banner-text">Basket</span>
                 <img src="assets/images/shopping-cart.png" class="banner-icon">
-            </a>
-            <a href="about.html" class = "banner-button">
-                <span class = "banner-text">About</span>
-                <img src="assets/images/invoice.png" class="banner-icon">
-            </a>
-            <a href="contact.html" class = "banner-button">
-                <span class = "banner-text">Contact</span>
-                <img src="assets/images/mail.png" class="banner-icon">
             </a>
         </div>
     </div>
@@ -97,44 +89,6 @@
             <div class = "shop-panel-name">Product Name</div>
             <div class = "shop-panel-price">£9.99</div>
         </div>
-        <div class = "shop-panel-tile">
-            <img src = "assets/images/insert_image.jpg" class = "shop-panel-img">
-            <div class = "shop-panel-name">Product Name</div>
-            <div class = "shop-panel-price">£9.99</div>
-        </div>
-        <div class = "shop-panel-tile">
-            <img src = "assets/images/insert_image.jpg" class = "shop-panel-img">
-            <div class = "shop-panel-name">Product Name</div>
-            <div class = "shop-panel-price">£9.99</div>
-        </div>
-        <div class = "shop-panel-tile">
-            <img src = "assets/images/insert_image.jpg" class = "shop-panel-img">
-            <div class = "shop-panel-name">Product Name</div>
-            <div class = "shop-panel-price">£9.99</div>
-        </div>
-        <div class = "shop-panel-tile">
-            <img src = "assets/images/insert_image.jpg" class = "shop-panel-img">
-            <div class = "shop-panel-name">Product Name</div>
-            <div class = "shop-panel-price">£9.99</div>
-        </div>
-        <div class = "shop-panel-tile">
-            <img src = "assets/images/insert_image.jpg" class = "shop-panel-img">
-            <div class = "shop-panel-name">Product Name</div>
-            <div class = "shop-panel-price">£9.99</div>
-        </div>
-        <div class = "shop-panel-tile">
-            <img src = "assets/images/insert_image.jpg" class = "shop-panel-img">
-            <div class = "shop-panel-name">Product Name</div>
-            <div class = "shop-panel-price">£9.99</div>
-        </div>
-        <div class = "shop-panel-tile">
-            <img src = "assets/images/insert_image.jpg" class = "shop-panel-img">
-            <div class = "shop-panel-name">Product Name</div>
-            <div class = "shop-panel-price">£9.99</div>
-        </div>
-        <a href="catalog.html" class="shop-panel-view-all-button"> 
-            <span class="shop-panel-view-all-text">View All Products</span>
-        </a>
     </div>
 </body>
 <footer>
