--- a/category.html
+++ b/category.html
@@ -13,35 +13,25 @@
     <div id="sidenav" class="sidenav">
         <a href="javascript:void(0)" class="closebtn" onclick="closeNav()">&times;</a>
         <a href="index.html">Home</a>
+        <a href="catalog.html">Products</a>
         <a href="about.html">About</a>
         <a href="contact.html">Contact</a>
-        <a href="#">ToC's</a>
     </div>
 
-    <div class="banner-wrap">
-        <div class="banner-left">
-            <div class="banner-button" onclick="openNav()">
-                <img src="assets/images/menu.png" class="banner-icon" alt="menu">
-                <span class="banner-text">Menu</span>
+<div class="banner-wrap">
+        <div class = "banner-left">
+            <div class = "banner-button" onclick="openNav()">
+                <img src="assets/images/menu.png" class="banner-icon">
+                <span class = "banner-text">Menu</span>
             </div>
         </div>
-
-        <a href="index.html" class="banner-center banner" aria-label="Home">
+        <a href="index.html" class="banner-center banner">
             <img src="assets/images/logo.png" alt='Coast to Coast Logo' class="banner-logo">
         </a>
-
-        <div class="banner-right banner">
-            <a href="catalog.html" class="banner-button">
-                <span class="banner-text">Shop</span>
-                <img src="assets/images/shopping-cart.png" class="banner-icon" alt="shop">
-            </a>
-            <a href="about.html" class="banner-button">
-                <span class="banner-text">About</span>
-                <img src="assets/images/invoice.png" class="banner-icon" alt="about">
-            </a>
-            <a href="contact.html" class="banner-button">
-                <span class="banner-text">Contact</span>
-                <img src="assets/images/mail.png" class="banner-icon" alt="contact">
+        <div class = "banner-right banner">
+            <a href="cart.html" class = "banner-button">
+                <span class = "banner-text">Basket</span>
+                <img src="assets/images/shopping-cart.png" class="banner-icon">
             </a>
         </div>
     </div>
